--- a/index.html
+++ b/index.html
@@ -406,7 +406,10 @@
                             </div>
                         </div>
                         
-                        <button class="contact-btn">Liên hệ ngay</button>
+                        <div class="contact-buttons">
+                            <button class="contact-btn">Gửi tin nhắn</button>
+                            <button class="call-btn">Gọi điện</button>
+                        </div>
                         
                         <div class="product-meta">
                             <p><strong>Danh mục:</strong> <span id="modalCategory">Máy mài</span></p>
