--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="products-grid">
                 <div class="product-card" data-category="de">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=400&h=300&fit=crop');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-hammer"></i>
                         </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="product-card" data-category="eto">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=400&h=300&fit=crop');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-cog"></i>
                         </div>
@@ -173,7 +173,7 @@
 
                 </div>
                 <div class="product-card" data-category="may-cat">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=400&h=300&fit=crop');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-cut"></i>
                         </div>
@@ -187,7 +187,7 @@
 
                 </div>
                 <div class="product-card" data-category="may-khoan">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=400&h=300&fit=crop');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-tools"></i>
                         </div>
@@ -201,7 +201,7 @@
 
                 </div>
                 <div class="product-card" data-category="may-mai">
-                    <div class="product-image" style="background-image: url('https://images.unsplash.com/photo-1581094794329-c8112a89af12?w=400&h=300&fit=crop');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-wrench"></i>
                         </div>
@@ -357,8 +357,8 @@
                 <div class="footer-section">
                     <h4>Theo Dõi Chúng Tôi</h4>
                     <div class="social-links">
-                        <a href="#" class="social-link"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="social-link"><i class="fab fa-youtube"></i></a>
+                        <a href="https://www.facebook.com/xuan.thinh.nguyen.711530" class="social-link"><i class="fab fa-facebook"></i></a>
+                        <a href="https://www.youtube.com/channel/UCwa-X_uyPuO3bsYe-IYpPsg" class="social-link"><i class="fab fa-youtube"></i></a>
                         <a href="#" class="social-link"><i class="fab fa-zalo"></i></a>
                     </div>
                 </div>
