--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="products-grid">
                 <div class="product-card" data-category="de">
-                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/de/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-hammer"></i>
                         </div>
@@ -159,7 +159,7 @@
                     </div>
                 </div>
                 <div class="product-card" data-category="eto">
-                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/eto/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-cog"></i>
                         </div>
@@ -173,7 +173,7 @@
 
                 </div>
                 <div class="product-card" data-category="may-cat">
-                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/may_cat/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-cut"></i>
                         </div>
@@ -187,7 +187,7 @@
 
                 </div>
                 <div class="product-card" data-category="may-khoan">
-                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/may_khoan/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-tools"></i>
                         </div>
@@ -201,7 +201,7 @@
 
                 </div>
                 <div class="product-card" data-category="may-mai">
-                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/unnamed.jpg');">
+                    <div class="product-image" style="background-image: url('https://hangbaisaigon.com/product/may_mai/unnamed.jpg');">
                         <div class="product-overlay">
                             <i class="fas fa-wrench"></i>
                         </div>
